--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 
 
-DB_DSN = root:Sreehari@2005@tcp(127.0.0.1:3306)/users_db?parseTime=true
+DB_USER=root
+DB_PASSWORD=Sreehari@2005
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_NAME=users_db
